2014-04-27  Benno Schulenberg  <bensberg@justemail.net>
	* src/nano.c (usage, main): Don't blurt out the full help text
	but just a hint when the command line contains some mistake, to
	avoid drowning out the error message.
	* src/nano.c (usage): Mention only those options that actually do
	something.  For the no-op compat flags the man page is the place.
	* src/global.c (shortcut_init): In the help lines of Search/Replace
	show the important toggles early on, and group them better.
	* src/global.c (shortcut_init): Improve order and grouping in the
	main help text and help lines.
	* src/global.c (strtosc): Fix compilation with --enable-tiny.
	* src/global.c (shortcut_init): Improve the order of the help items
	still further, and make them also group nicely in the tiny version.

2014-04-27  Mark Majeres  <mark@engine12.com>
	* src/rcfile.c (parse_include): Plug two tiny memory leaks.

2014-04-26  Benno Schulenberg  <bensberg@justemail.net>
	* src/global.c (add_to_funcs): Add a pointer to the tail of the
	functions list, to simplify and speed up adding new items.  And
	make use of it to remember the location of the Uncut item.
	* src/global.c, src/files.c (make_new_buffer, close_buffer): Make
	help lines show "Close" again when more than one buffer is open.
	* src/global.c (strtosc), doc/man/nanorc.5: Allow the do_spell
	(and thus do_lint) function to be bound to other key combos.
	* src/global.c (strtosc), doc/man/nanorc.5: Group related functions
	together, remove duplicate up/down, add missing prevpage/nextpage.

2014-04-24  Benno Schulenberg  <bensberg@justemail.net>
	* doc/faq.html: Update a few URLs, delete some obsolete ones, update
	the section on configuration flags and on translating nano, a whole
	series of other small fixes and adjustments.

2014-04-23  Benno Schulenberg  <bensberg@justemail.net>
	* src/winio.c, src/help.c, src/text.c, src/browser.c: Remove
	several unneeded double semicolons, and two relic comments.