@@ -1,7 +1,7 @@
 # Configuration for GNU nano - a small and user-friendly text editor
 #
-# Copyright (C) 1999, 2000, 2001, 2002, 2003, 2004, 2005, 2006, 2007
-# Free Software Foundation, Inc.
+# Copyright (C) 1999, 2000, 2001, 2002, 2003, 2004, 2005, 2006, 2007,
+# 2008, 2009, 2010, 2011, 2013, 2014 Free Software Foundation, Inc.
 #
 # GNU nano is free software; you can redistribute it and/or modify it
 # under the terms of the GNU General Public License as published by the
