@@ -1,6 +1,6 @@
 .\" Hey, EMACS: -*- nroff -*-
-.\" Copyright (C) 2003, 2004, 2005, 2006, 2007, 2008, 2009
-.\" Free Software Foundation, Inc.
+.\" Copyright (C) 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011,
+.\" 2013, 2014 Free Software Foundation, Inc.
 .\"
 .\" This document is dual-licensed.  You may distribute and/or modify it
 .\" under the terms of either of the following licenses:
