@@ -34,7 +34,7 @@ editor.
 This manual is part of the GNU @code{nano} distribution.@*
 @sp 4
 Copyright (C) 1999, 2000, 2001, 2002, 2003, 2004, 2005, 2006, 2007,
-2008, 2009 Free Software Foundation, Inc.
+2009, 2014 Free Software Foundation, Inc.
 
 This document is dual-licensed.  You may distribute and/or modify it
 under the terms of either of the following licenses:
